--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,13 @@
-language:
-    python
+  
+language: python
 
 python:
-    - 3.8
-    - 3.7
+    - 3.5
     - 3.6
+    - 3.7
 
 install:
-    pip install pytest pytest-cov coveralls
+    pip install -r requirements.txt
 
 script:
     pytest --cov=src/
